--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,10 @@ src/data/region_map/region_map_entries.h
 src/data/region_map/region_map_entry_strings.h
 src/data/region_map/porymap_config.json
 tags
-tools/agbcc
+
+# can just build if this is in the git repo
+#tools/agbcc
+
 tools/binutils
 types_*.taghl
 !.github/calcrom/calcrom.pl
